# hw04-noah-krchak

./: .gitignore  CMakeLists.txt  edge_case_tests_session_summary.py  unit_tests_session_summary.py
src/: CMakeLists.txt
src/CurvatureAD/: CMakeLists.txt  CurvatureAD.cxx  CurvatureAD.xml  README.MD
src/DOG/: CMakeLists.txt  DOG.cxx  DOG.xml  README.MD
src/GaussianLPF/: CMakeLists.txt  GaussianLPF.cxx  GaussianLPF.xml  README.MD
src/GradientAD/: CMakeLists.txt  GradientAD.cxx  GradientAD.xml  README.MD
src/SimpleThreshold/: CMakeLists.txt  SimpleThreshold.cxx  SimpleThreshold.xml
